--- a/src/style.css
+++ b/src/style.css
@@ -78,3 +78,21 @@ main {
 .roll-dice:active {
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+
+@media screen and (max-width:600px) {
+    main {
+        height: 90vh;
+    }
+
+    .dice-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .die-face {
+        min-width: 70px;
+    }
+
+
+}
