--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ main {
 }
 
 .roll-dice {
+    margin-top: 30px;
     height: 50px;
     width: 150px;
     border: none;
@@ -77,6 +78,13 @@ main {
 
 .roll-dice:active {
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+span {
+    background-color: #dedede;
+    margin: 20px;
+    border-radius: 10px;
+    padding: 8px;
 }
 
 @media screen and (max-width:600px) {
